# gluon

./: .gitmodules  .golangci.yml  .releaserc  README.md  builder.go  errors.go  go.mod  go.sum  option.go  server.go  server_test.go  watcher.go  watcher_test.go  wg.go
.github/workflows/: cifuzz.yml  parser-build-and-push.yml  pull-request.yml  release.yml
async/: group.go  panic_handler.go  panic_handler_test.go  queued_channel.go  queued_channel_test.go
benchmarks/: README.md
benchmarks/gluon_bench/: README.md  main.go  server.go
benchmarks/imaptest/: README.md  benchmark.yml  default.sh  full.sh  main_test.go
connector/: connector.go  dummy.go  dummy_simulate.go  dummy_state.go  dummy_test.go  package.go  state.go
connector/mock_connector/: connector.go
constants/: constants.go
db/: client.go  deferred_delete.go  errors.go  ops.go  ops_mailbox.go  ops_message.go  ops_subscription.go  types.go
demo/: demo.go
events/: events.go  id.go  listener.go  login.go  login_failed.go  select.go  session.go  user.go
imap/: attributes.go  capabilities.go  envelope.go  envelope_test.go  flags.go  flags_test.go  id.go  mailbox.go  message.go  params.go  seqset.go  seqset_test.go  status.go  strong_types.go  structure.go  structure_test.go  uid_validity_generator.go  uid_validity_generator_test.go  update.go  update_mailbox_created.go  update_mailbox_deleted.go  update_mailbox_id_changed.go  update_mailbox_updated.go  update_message_created.go  update_message_deleted.go  update_message_flags_updated.go  update_message_id_changed.go  update_message_labels_updated.go  update_message_updated.go  update_noop.go  update_uid_validity_bumped.go  update_waiter.go  utils.go
imap/command/: append.go  append_test.go  capability.go  capability_test.go  check.go  check_test.go  close.go  close_test.go  command.go  copy.go  copy_test.go  create.go  create_test.go  date_time.go  date_time_test.go  delete.go  delete_test.go  done.go  done_test.go  examine.go  examine_test.go  expunge.go  expunge_test.go  fetch.go  fetch_attributes.go  fetch_test.go  flags.go  flags_test.go  id.go  id_test.go  idle.go  idle_test.go  input_collector.go  input_collector_test.go  list.go  list_test.go  login.go  login_test.go  logout.go  logout_test.go  (+34 more)
imap/parser/: parser.go  parser_test.go  scanner.go
imap/testdata/: bounds.eml  envelope.eml  rfc822.eml
internal/: version_info.go
internal/backend/: backend.go  connector_state.go  connector_state_read.go  connector_state_write.go  connector_updates.go  context.go  db.go  db_mailbox.go  db_message.go  errors.go  header.go  ids.go  init.go  mailbox.go  mailbox_fetch.go  mailbox_fetcher.go  mailbox_search.go  mailbox_tx.go  match.go  match_test.go  message_tx.go  paths.go  paths_test.go  pool.go  responders.go  seqset.go  snapshot.go  snapshot_messages.go  snapshot_messages_test.go  state.go  state_actions.go  state_connector_impl.go  user.go  (+6 more)
internal/parser/: .clang-format  CMakeLists.txt  build.sh  package.go  parser.go  parser.i  parser_test.go  parser_wrap.cxx  rfc5322_address_list.go  rfc5322_address_list_test.go  rfc5322_date_time.go  rfc5322_date_time_test.go  vcpkg.json
internal/parser/grammar/: CMakeLists.txt  IMAPLexer.g4  IMAPParser.g4  RFC2047Lexer.g4  RFC2047Parser.g4  RFC5322AddressListLexer.g4  RFC5322AddressListParser.g4  RFC5322DateTimeLexer.g4  RFC5322DateTimeParser.g4
internal/parser/overlay-triplet/: arm64-osx-min-11.0.cmake  x64-osx-min-10.15.cmake  x64-osx-min-11.0.cmake
internal/parser/proto/: CMakeLists.txt  imap.pb.go  imap.proto  package.go
internal/parser/src/: CMakeLists.txt  error_listener.cpp  error_listener.h  parser.cpp  parser.h  visitor.cpp  visitor.h
internal/parser/src/imap/: parser.cpp  parser.h  parser_capi.cpp  parser_capi.h  visitor.cpp  visitor.h
internal/parser/src/rfc2047/: rfc2047_parser.cpp  rfc2047_parser.h
internal/parser/src/rfc5322/: address_list_visitor.cpp  address_list_visitor.h  rfc5322_address_list_parser.cpp  rfc5322_address_list_parser.h  rfc5322_date_time_parser.cpp  rfc5322_date_time_parser.h  rfc5322_parser_capi.cpp  rfc5322_parser_capi.h
internal/parser/tests/parser/: CMakeLists.txt  address_list_test.cpp  date_time_test.cpp  parser_test.cpp
limits/: imap.go
logging/: flags_debug.go  logging.go
observability/: context.go  observability.go  utils.go
profiling/: cmd_profiler.go  context.go
queue/: queued_channel.go  queued_channel_test.go
reporter/: context.go  null_reporter.go  reporter.go  utils.go
rfc5322/: address.go  address_test.go  atom.go  atom_test.go  backtracing_scanner.go  cfws.go  cfws_test.go  date_time.go  date_time_test.go  miscelleaneous.go  miscelleaneous_test.go  parser.go  parser_test.go  quoted.go  quoted_test.go  validation.go  validation_test.go
rfc822/: encrypt.go  hash.go  hash_test.go  header.go  header_parser.go  header_test.go  mime.go  parser.go  parser_test.go  scanner.go  scanner_test.go  writer_test.go
rfcparser/: parser.go  parser_test.go  scanner.go
rfcvalidation/: validation.go  validation_test.go
store/: badger.go  compressor.go  compressor_gzip.go  compressor_zlib.go  disk.go  fallback.go  hash.go  memory.go  option.go  package.go  semaphore.go  semaphore_test.go  store.go  store_test.go  write_controlled_store.go  write_controlled_store_test.go
tests/: account_test.go  append_test.go  bad_test.go  benchmark_big_mailbox_test.go  benchmark_fetch_test.go  cache_reset_test.go  capability_test.go  case_test.go  cert_test.go  check_test.go  close_test.go  connection_test.go  copy_test.go  counts_test.go  create_test.go  db_test.go  delete_test.go  deleted_test.go  deletion_pool_test.go  draft_test.go  event_waiter.go  examine_test.go  expunge_test.go  fetch_body_test.go  fetch_test.go  full_state_test.go  helper_test.go  id_test.go  idle_test.go  imap_limits_test.go  init_test.go  invalid_test.go  list_test.go  login_test.go  logout_test.go  lsub_test.go  main_test.go  migration_test.go  move_test.go  multi_test.go  (+26 more)
utils/: dependency_license.sh
version/: info.go
wait/: wg.go
watcher/: watcher.go  watcher_test.go
(+501 files in other folders)
